# django_dans_notifications

./: .coveragerc  .flake8  .gitignore  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  TODO.md  manage.py  mypy.ini  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test_backward_compatibility.py  test_email_templates.py  tox.ini
.github/workflows/: lint.yml  python-types.yml  release.yml  test-django.yml  test-pypy.yml  test-python.yml  test_python.yml
django_dans_notifications/: admin.py  apps.py  email_sender.py  email_utils.py  helpers.py  logging.py  notification_manager.py  serializers.py  settings.py  threads.py  urls.py
django_dans_notifications.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_dans_notifications/migrations/: 0001_initial.py  0002_alter_notificationemailtemplate_options.py
django_dans_notifications/models/: base.py  basic.py  email.py  notifications.py  push.py
django_dans_notifications/serializers/: basic.py  email.py  push.py
django_dans_notifications/templates/django-dans-emails/: README.md  base.html  contact.html  (+7 more)
django_dans_notifications/test/: settings.py  test_email_sender.py  test_helpers.py  test_notification_manager.py  test_threads.py
django_dans_notifications/views/: basic.py  email.py  push.py
docs/: apis.md  email-templates.md  getting-started.md  models.md  release.md  usage.md
notifications/: admin.py  api_response.py  api_response_handler.py  helpers.py  manage.py  notification_manager.py  urls.py
notifications/migrations/: 0001_initial.py  0002_alter_emailnotification_managers_and_more.py  0003_rename_from_user_basicnotification_sender_and_more.py  0004_rename_basicnotification_notificationbasic_and_more.py  0005_remove_notificationbasic_recipients_and_more.py  0006_alter_notificationemailtemplate_managers_and_more.py  __init__.py
notifications/models/: base.py  email.py
notifications/serializers/: base.py  basic.py  email.py  push.py
notifications/test/: settings.py
notifications/views/: basic.py  email.py  push.py
(+29 files in other folders)
